# my-pycon-tutorials

./: .gitignore
tutorials/modern_py_dev_toolkit/: my_todo.py
tutorials/modern_py_dev_toolkit/emptytodo/todo/: LICENSE  run.py
tutorials/modern_py_dev_toolkit/emptytodo/todo/tests/: conftest.py  test_app.py
tutorials/modern_py_dev_toolkit/emptytodo/todo/todo/: __init__.py  api.py  models.py  views.py
tutorials/modern_py_dev_toolkit/my_app/: app.py
tutorials/modern_py_dev_toolkit/to_do/: .travis.yml  AUTHORS.rst  CONTRIBUTING.rst  HISTORY.rst  LICENSE  Makefile  README.rst  setup.cfg  setup.py  tox.ini
tutorials/modern_py_dev_toolkit/to_do/.github/: ISSUE_TEMPLATE.md
tutorials/modern_py_dev_toolkit/to_do/docs/: Makefile  conf.py  index.rst  installation.rst  make.bat  usage.rst
tutorials/modern_py_dev_toolkit/to_do/tests/: __init__.py  test_to_do.py
tutorials/modern_py_dev_toolkit/to_do/to_do/: __init__.py  cli.py  to_do.py
tutorials/packaging_demystified/: pi_approx_cy.c  pi_approx_cy.pyx  pyproject.toml  setup.cfg  setup.py
tutorials/packaging_demystified/dca_temp/: LICENSE  dcatemp.py  pyproject.toml
tutorials/packaging_demystified/demo/: .python-version
tutorials/packaging_demystified/pi_approx.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tutorials/packaging_demystified/presentation/: NOTES.md  purelib_platlib.py  view_importers.py  view_path.py
tutorials/pythonic_objects/: README.rst  my_coord.py
tutorials/pythonic_objects/.ipynb_checkpoints/: attr_basics-checkpoint.ipynb
(+4 files in other folders)
