[metadata]
name = pi_approx
version = 1.0.0
description = Compute pi
long_description = file: README.md
long_description_content_type = text/markdown
author = Sofia Zavala
author_email = szavala3@outlook.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License

[options]
packages = find:
# py_modules = pi_approximate
python_requirements = >=3.9

