[build-system]
requires = [
    "flit_core >=3.2,<4",
    "beautifulsoup4 >=4.9",
    "bs4 >=0.0.1",
]
build-backend = "flit_core.buildapi"

[project]
name = "dcatemp"
authors = [{name = "Sofia Zavala", email = "szavala3@outlook.com"}]
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]
requires-python = ">=3.8"
